Segundo proyecto backend: Información de vuelos y asignación de nuevos pasajeros de una Base de Datos dada - 2do commit

--- a/PROYECTO_VUELOS/vuelos/templates/vuelos/index.html
+++ b/PROYECTO_VUELOS/vuelos/templates/vuelos/index.html
@@ -7,4 +7,6 @@
             <li><a href="{% url 'vuelos:vuelo' vuelo.id %}">Vuelo {{vuelo.id}}</a>: {{vuelo.origen}} a {{vuelo.destino}}</li>
         {% endfor %}
     </ul>
+
+    <a href="{% url 'usuarios:login' %}">Iniciar sesión</a>
 {% endblock body %}
